// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register should match a snapshot for PENDING state 1`] = `
<div>
  <div
    className="undefined "
  >
    <h1
      className="title is1 isCentered"
    >
      Register
    </h1>
    <p
      className="pb-8"
    >
      Reapit Foundations developers
    </p>
    <Formik
      enableReinitialize={false}
      initialValues={
        Object {
          "companyName": "",
          "confirmPassword": "",
          "email": "",
          "name": "",
          "password": "",
          "telephone": "",
        }
      }
      isInitialValid={false}
      onSubmit={[Function]}
      render={[Function]}
      validate={[Function]}
      validateOnBlur={true}
      validateOnChange={true}
    />
  </div>
  <div>
    <img
      alt="Reapit graphic"
      src=""
    />
  </div>
</div>
`;

exports[`Register should match a snapshot for SUCCESS state 1`] = `
<div>
  <div
    className="undefined "
  >
    <h1
      className="title is1 isCentered"
    >
      Register
    </h1>
    <p
      className="pb-8"
    >
      Reapit Foundations developers
    </p>
    <CallToAction
      buttonText="Login"
      dataTest="register-success-message"
      isCenter={true}
      onButtonClick={[Function]}
      title="Success!"
    >
      Check you email to confirm your account
    </CallToAction>
  </div>
  <div>
    <img
      alt="Reapit graphic"
      src=""
    />
  </div>
</div>
`;
